package com.compiler.lexical.dfa;

public enum TokenType {
    ID, NUMBER, FLOAT_NUMBER, TEXT,
    ASSIGN, SEMICOLON,
    PLUS, MINUS, TIMES, DIVIDE, MOD,
    EQ, NE, LT, GT, LE, GE,
    LPAREN, RPAREN,
    LBRACE, RBRACE,
    COMMA, DOT,
    ENTERO, FLOTANTE, CADENA,
    SI, SINO, MIENTRAS, PARA, IMPRIMIR, ENETRO
}
